--- a/fig/tikz/optimering/opti_loes.tex
+++ b/fig/tikz/optimering/opti_loes.tex
@@ -6,19 +6,12 @@
 %
 % -------------------------------------------------------
 \begin{axis}[
-	 axis x line=center,
-  axis y line=center,
-  xtick={-5,-4,...,5},
-  ytick={-5,-4,...,5},
-  xlabel={$x_1$},
-  ylabel={$x_2$},
-  xlabel style={right},
-  ylabel style={above},
-  xmin=-1,
+	axis lines = left,
+	xlabel = $x_1$,
+	ylabel = \rotatebox{-90}{$x_2$},
   xmax=4,
-  ymin=-1,
-  ymax=4]
-	legend style={at={(0.45,0.025)},anchor=south west},
+  ymax=4,
+  legend style={at={(1,1)},anchor=north east},
 ]
 %%%
 %%%
@@ -38,6 +31,7 @@
 %\addplot[domain=-1:6, samples=2, color=black, dotted, thick]{2-x};
 %\addplot[domain=0:6, samples=2, color=black, dotted, thick]{4-x};
 \addplot[mark=*] coordinates {(2,2)};
+\addplot[mark=none] coordinates {(0,0) (0,3)};
 \end{axis}
 %\draw[thick,->] (1.4,1.2) -- (2.75,2.35) node[above right] {$\mathbf{v}$};
 \end{tikzpicture}
