--- a/fig/tikz/optimering/opti_loes2.tex
+++ b/fig/tikz/optimering/opti_loes2.tex
@@ -6,19 +6,12 @@
 %
 % -------------------------------------------------------
 \begin{axis}[
-	 axis x line=center,
-  axis y line=center,
-  xtick={-5,-4,...,5},
-  ytick={-5,-4,...,5},
-  xlabel={$x_1$},
-  ylabel={$x_2$},
-  xlabel style={below right},
-  ylabel style={above left},
-  xmin=-1,
-  xmax=4,
-  ymin=-1,
-  ymax=4]
-	legend style={at={(0.45,0.025)},anchor=south west},
+axis lines = left,
+xlabel = $x_1$,
+ylabel = \rotatebox{-90}{$x_2$},
+xmax=4,
+ymax=4,
+	legend style={at={(1,1)},anchor=north east},
 ]
 
 %%%
@@ -28,21 +21,23 @@
 \addplot[name path=a, domain={0:6}, color=myred, style=very thick, samples=2]{3-0.5*x};
 \addlegendentry{$x_1+2x_2 \leq 6$}
 %%
-\addplot[name path=c, domain=0:3,samples=2,color=black, style=very thin]{0};
+\addplot[name path=c, domain=0:4,samples=2,color=black, style=very thin]{0};
 %%
 \addplot[fill=myblue!15] fill between [of=a and c, soft clip={domain=0:2}];
 \addplot[fill=myblue!15] fill between [of=b and c, soft clip={domain=2:4}];
  
 %
 
-%	
-\addplot[domain=-1:6, samples=2, color=black, dotted, thick]{-x};
-\addplot[domain=-1:6, samples=2, color=black, dotted, thick]{2-x};
-\addplot[domain=0:6, samples=2, color=black, dotted, ultra thick]{4-x};
+\addplot[domain=0:2, samples=2, color=black, dotted, thick]{2-x};
+\addplot[domain=0:2, samples=2, color=black, dotted, thick]{4-x};
+\addplot[mark=none] coordinates {(0,0) (0,3)};
+\addplot[mark=*, ultra thick] coordinates {(2,2) (4,0)};
+\addplot[mark=none, thick, ->] coordinates {(0,0) (1,1)} node[above right] {$\mathbf{v}$};
 \end{axis}
-\draw[thick,->] (1.4,1.2) -- (2.75,2.35) node[above right] {$\mathbf{v}$};
+%\draw[thick,->] (1.4,1.2) -- (2.75,2.35) node[above right] {$\mathbf{v}$};
+
 \end{tikzpicture}
-\caption{En begrænset løsningsmængde, markeret med blå, afgrænset af lineære betingelser, med uendeligt antal løsninger til problemet.}
+\caption{En begrænset løsningsmængde, markeret med blå, afgrænset af lineære betingelser, med uendeligt mange løsninger til problemet.}
 %
 \label{fig:opti_loes2}
 \end{figure}
