--- a/fig/tikz/optimering/opti_loes4.tex
+++ b/fig/tikz/optimering/opti_loes4.tex
@@ -6,19 +6,12 @@
 %
 % -------------------------------------------------------
 \begin{axis}[
-	 axis x line=center,
-  axis y line=center,
-  xtick={-5,-4,...,5},
-  ytick={-5,-4,...,5},
-  xlabel={$x_1$},
-  ylabel={$x_2$},
-  xlabel style={below right},
-  ylabel style={above left},
-  xmin=-1,
-  xmax=4,
-  ymin=-1,
-  ymax=4]
-	legend style={at={(0.45,0.025)},anchor=south west},
+axis lines = left,
+xlabel = $x_1$,
+ylabel = \rotatebox{-90}{$x_2$},
+xmax=4,
+ymax=4,
+	legend style={at={(1,1)},anchor=north east},
 ]
 %
 %
@@ -34,21 +27,14 @@
 \addplot[name path=d, domain=0:6,samples=2,color=white, style=ultra thin]{6};
 \addplot[name path=c, domain=0:3,samples=2,color=black, style=very thin]{0};
 
-
-
 \addplot[fill=myblue!15] fill between [of=d and b, soft clip={domain=0:2}];
 \addplot[fill=myblue!15] fill between [of=d and a, soft clip={domain=2:4}];
- 
 
-%
-
-%	
-\addplot[domain=-1:6, samples=2, color=black, dotted, thick]{-x};
-\addplot[domain=-1:6, samples=2, color=black, dotted, thick]{2-x};
-\addplot[domain=0:6, samples=2, color=black, dotted, thick]{4-x};
+\addplot[domain=0:2, samples=2, color=black, dotted, thick]{2-x};
+\addplot[domain=0:4, samples=2, color=black, dotted, thick]{4-x};
 \addplot[mark=*] coordinates {(2,2)};
+\addplot[mark=none, thick, ->] coordinates {(0,0) (1,1)} node[above right] {$\mathbf{v}$};
 \end{axis}
-\draw[thick,->] (1.4,1.2) -- (2.75,2.35) node[above right] {$\mathbf{v}$};
 \end{tikzpicture}
 \caption{En begrænset løsningsmængde, markeret med blå, afgrænset af lineære betingelser, hvor den optimale løsning er $\infty$ til problemet.}
 %
